# OpenMP-Learn

OpenMP_Tutorial/: .gitignore  CMakeLists.txt  main.cpp
OpenMP_Tutorial/.cache/clangd/index/: fibbonacci.cpp.86262DC1E31B12A6.idx  fourier_shift.c.33CA0E095DBECD75.idx  main.cpp.F67E29C312E29FB0.idx  parallel_pi.cpp.762F7BE5E99EEC6B.idx  parallel_pi_exclusion.cpp.F6EFAC1FC389D557.idx  reduction.cpp.4FD888B62737198C.idx  reduction_pi.cpp.C67F006E3CEA144A.idx  serial_pi.cpp.F8182FB8860B5818.idx
OpenMP_Tutorial/Sources/: average.cpp  fibbonacci.cpp  fourier_shift.c  parallel_pi.cpp  parallel_pi_exclusion.cpp  reduction.cpp  reduction_pi.cpp  schedule.cpp  serial_pi.cpp
